--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
