--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.15",
     "core-js": "^3.8.3",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
