--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   },
   "dependencies": {
     "ant-design-vue": "^3.2.15",
+    "axios": "^1.3.1",
     "core-js": "^3.8.3",
-    "ts-loader": "^9.4.2",
-    "typescript": "^4.9.4",
-    "vue": "^3.2.13"
+    "js-cookie": "^3.0.1",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.0.30",
+    "vue": "^3.2.13",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,7 +26,9 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5"
   },
   "eslintConfig": {
     "root": true,
